--- a/reference/chainid.v1.yaml
+++ b/reference/chainid.v1.yaml
@@ -15,6 +15,9 @@ components:
     User:
       title: User
       type: object
+      description: 'Any user of the system, including credentials.'
+      x-examples:
+        example-1: {}
       properties:
         id:
           type: string
@@ -22,23 +25,22 @@ components:
           $ref: '#/components/schemas/Person'
         email:
           type: string
-        '':
-          type: string
-      description: |
-        User and credentials
+      required:
+        - id
+        - email
     Person:
       title: Person
       type: object
       properties:
         id:
           type: string
-        logDateAdded:
-          type: string
-        '':
-          type: string
+      required:
+        - id
+      description: The representation of an identity of an user.
     Attribute:
       title: Attribute
       type: object
+      description: 'The attribute of a person. For instance, for the attribute type "name", the value would be "John".'
       properties:
         id:
           type: string
@@ -46,20 +48,19 @@ components:
           type: string
         attributeType:
           $ref: '#/components/schemas/AttributeType'
-        default:
-          type:
-            - boolean
-            - 'null'
         levelOfAssurance:
           type: string
           description: |-
             See NIST standard on LOA.
 
             Reverse process of the consent, where a "company" provides attributes of a specific level of assurance to a person.
-        levelOfAssuranceCompanyProfile:
-          $ref: '#/components/schemas/CompanyProfile'
-        '':
-          type: string
+        person:
+          $ref: '#/components/schemas/Person'
+      required:
+        - id
+        - value
+        - attributeType
+        - person
     AttributeType:
       title: AttributeType
       type: object
@@ -70,32 +71,45 @@ components:
           type: string
         description:
           type: string
-        '':
-          type: string
+      required:
+        - id
+        - label
     Company:
-      title: Campany
+      title: Company
       type: object
       properties:
         id:
           type: string
-    UserCompany:
-      title: UserCompany
+      required:
+        - id
+    PersonCompany:
+      title: PersonCompany
       type: object
       properties:
         id:
           type: string
+        person:
+          $ref: '#/components/schemas/Person'
+        company:
+          $ref: '#/components/schemas/Company'
+      required:
+        - id
+        - person
+        - company
+      description: The identities linked to a specic company.
     CompanyProfile:
       title: CompanyProfile
       type: object
       description: |
-        Data requested by Company
+        Data requested by the company.
       properties:
         id:
           type: string
         company:
           $ref: '#/components/schemas/Company'
-        '':
-          type: string
+      required:
+        - id
+        - company
     DataXChange:
       title: DataXChange
       type: object
@@ -116,8 +130,9 @@ components:
           type:
             - string
             - 'null'
-        '':
-          type: string
+      required:
+        - id
+      description: ''
     AttributeDataXChange:
       title: AttributeDataXChange
       type: object
@@ -130,11 +145,15 @@ components:
           $ref: '#/components/schemas/Attribute'
         attributeProfileType:
           $ref: '#/components/schemas/AttributeProfileType'
-        '':
-          type: string
-    AttributeProfileType:
-      title: AttributeProfileType
+      required:
+        - id
+        - dataxchange
+        - attribute
+        - attributeProfileType
+    CompanyProfileAttributeType:
+      title: CompanyProfileAttributeType
       type: object
+      description: ''
       properties:
         id:
           type: string
@@ -145,5 +164,8 @@ components:
         isOptional:
           type: integer
           description: There is more than a binary case.
-        '':
-          type: string
+      required:
+        - id
+        - profile
+        - attributeType
+  securitySchemes: {}
