--- a/reference/chainid.v1.yaml
+++ b/reference/chainid.v1.yaml
@@ -6,18 +6,99 @@ info:
     name: ChainId
     url: Chainid.io
     email: indo@chainid.io
-  description: Data Model for the chain id project
+  description: ''
 servers:
-  - url: api.chainid.io
-paths: {}
+  - url: 'http://localhost:3000'
+paths:
+  /login:
+    post:
+      summary: Login
+      operationId: post-login
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                required:
+                  - token
+      description: logs the user in
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+                - email
+                - password
+  /signup:
+    post:
+      summary: Signup
+      operationId: post-signup
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  uuid:
+                    type: string
+                required:
+                  - uuid
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+              required:
+                - email
+                - password
+      description: |
+        if signup succesful, the user gets an email with an activation link
+  /login/activate:
+    post:
+      summary: Activates user
+      operationId: post-login-activate
+      responses:
+        '200':
+          description: OK
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                uuid:
+                  type: string
+                secretKey:
+                  type: string
+              required:
+                - uuid
+                - secretKey
+      description: "this activates the user by changing their status. \n\nThe user then needs to login"
 components:
   schemas:
     User:
       title: User
       type: object
-      description: 'Any user of the system, including credentials.'
-      x-examples:
-        example-1: {}
+      description: |
+        User and credentials
       properties:
         id:
           type: string
@@ -25,22 +106,19 @@ components:
           $ref: '#/components/schemas/Person'
         email:
           type: string
-      required:
-        - id
-        - email
+        '':
+          type: string
     Person:
       title: Person
       type: object
       properties:
         id:
           type: string
-      required:
-        - id
-      description: The representation of an identity of an user.
+        logDateAdded:
+          type: string
     Attribute:
       title: Attribute
       type: object
-      description: 'The attribute of a person. For instance, for the attribute type "name", the value would be "John".'
       properties:
         id:
           type: string
@@ -48,16 +126,20 @@ components:
           type: string
         attributeType:
           $ref: '#/components/schemas/AttributeType'
+        default:
+          type:
+            - boolean
+            - 'null'
         levelOfAssurance:
-          $ref: '#/components/schemas/LevelOfAssurance'
-        person:
-          $ref: '#/components/schemas/Person'
-      required:
-        - id
-        - value
-        - attributeType
-        - levelOfAssurance
-        - person
+          type: string
+          description: |-
+            See NIST standard on LOA.
+
+            Reverse process of the consent, where a "company" provides attributes of a specific level of assurance to a person.
+        levelOfAssuranceCompanyProfile:
+          $ref: '#/components/schemas/CompanyProfile'
+        '':
+          type: string
     AttributeType:
       title: AttributeType
       type: object
@@ -68,56 +150,35 @@ components:
           type: string
         description:
           type: string
-      required:
-        - id
-        - label
-      description: 'The type of any given attribute, for instance "name", "dateOfBirth", etc.'
+        '':
+          type: string
     Company:
-      title: Company
-      type: object
-      description: 'The participating company which can request information from persons through a data exchange. In OpenID context, also known as relying party / RP.'
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        vat:
-          type: string
-      required:
-        - id
-        - name
-    PersonCompany:
-      title: PersonCompany
+      title: Campany
       type: object
       properties:
         id:
           type: string
-        person:
-          $ref: '#/components/schemas/Person'
-        company:
-          $ref: '#/components/schemas/Company'
-      required:
-        - id
-        - person
-        - company
-      description: The identities linked to a specic company.
+    UserCompany:
+      title: UserCompany
+      type: object
+      properties:
+        id:
+          type: string
     CompanyProfile:
       title: CompanyProfile
       type: object
       description: |
-        Data requested by the company.
+        Data requested by Company
       properties:
         id:
           type: string
         company:
           $ref: '#/components/schemas/Company'
-      required:
-        - id
-        - company
+        '':
+          type: string
     DataXChange:
       title: DataXChange
       type: object
-      description: ''
       properties:
         id:
           type: string
@@ -128,14 +189,15 @@ components:
         logDateAdded:
           type: string
         expiryDate:
-          type: string
+          type:
+            - string
+            - 'null'
         revokationDate:
+          type:
+            - string
+            - 'null'
+        '':
           type: string
-      required:
-        - id
-        - person
-        - companyProfile
-        - logDateAdded
     AttributeDataXChange:
       title: AttributeDataXChange
       type: object
@@ -146,18 +208,13 @@ components:
           $ref: '#/components/schemas/DataXChange'
         attribute:
           $ref: '#/components/schemas/Attribute'
-        companyProfileAttributeType:
-          $ref: '#/components/schemas/CompanyProfileAttributeType'
-      required:
-        - id
-        - dataxchange
-        - attribute
-        - companyProfileAttributeType
-      description: What the user chooses to share from his/her attributes for a data exchange requested by any company by matching with the company profile.
-    CompanyProfileAttributeType:
-      title: CompanyProfileAttributeType
+        attributeProfileType:
+          $ref: '#/components/schemas/AttributeProfileType'
+        '':
+          type: string
+    AttributeProfileType:
+      title: AttributeProfileType
       type: object
-      description: The attribute type requested by a company for a (potential) data exchange.
       properties:
         id:
           type: string
@@ -166,29 +223,7 @@ components:
         attributeType:
           $ref: '#/components/schemas/AttributeType'
         isOptional:
-          type: boolean
-          description: ''
-        levelOfAssuranceRequired:
-          $ref: '#/components/schemas/LevelOfAssurance'
-      required:
-        - id
-        - profile
-        - attributeType
-        - isOptional
-        - levelOfAssuranceRequired
-    LevelOfAssurance:
-      title: LevelOfAssurance
-      type: object
-      properties:
-        id:
           type: integer
-          description: ''
-        name:
+          description: There is more than a binary case.
+        '':
           type: string
-        description:
-          type: string
-      required:
-        - id
-        - name
-      description: "The level of assurance being requested or provided. ID is an integer since it's an enum, and you can specify that you need at least a level of assurance of {x}, where higher provided LoA's would still be ok."
-  securitySchemes: {}
